Initial commit: Complete medical registry system for workers with Spring Boot backend and React frontend