@@ -1,19 +1,14 @@
 package com.registremedical.controller;
 
-import com.registremedical.dto.EntrepriseRequestDTO;
 import com.registremedical.entity.Entreprise;
-import com.registremedical.entity.User;
 import com.registremedical.repository.EntrepriseRepository;
-import com.registremedical.security.JwtUtils;
-import com.registremedical.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.net.URI;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/entreprises")
@@ -23,129 +18,86 @@ public class EntrepriseController {
     @Autowired
     private EntrepriseRepository entrepriseRepository;
 
-    @Autowired
-    private UserService userService;
-
-    @Autowired
-    private JwtUtils jwtUtils;
-
     @GetMapping
-    public ResponseEntity<?> list() {
-        final Long userId;
-        try {
-            userId = jwtUtils.getCurrentUserId();
-        } catch (RuntimeException ex) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Non authentifié: " + ex.getMessage());
-        }
-        User current = userService.findById(userId).orElse(null);
-        if (current == null || !"EMPLOYEUR".equals(current.getRole().name())) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("Accès réservé aux employeurs");
-        }
-        return ResponseEntity.ok(entrepriseRepository.findByEmployeurId(current.getId()));
-    }
-
-    @GetMapping("/{id}")
-    public ResponseEntity<?> getOne(@PathVariable Long id) {
-        final Long userId;
-        try {
-            userId = jwtUtils.getCurrentUserId();
-        } catch (RuntimeException ex) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Non authentifié: " + ex.getMessage());
-        }
-        Optional<Entreprise> opt = entrepriseRepository.findByIdAndEmployeurId(id, userId);
-        if (opt.isPresent()) {
-            return ResponseEntity.ok(opt.get());
-        } else {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Entreprise non trouvée");
-        }
+    public List<Entreprise> getAllEntreprises() {
+        System.out.println("=== GET /api/entreprises appelé ===");
+        List<Entreprise> entreprises = entrepriseRepository.findAll();
+        System.out.println("Nombre d'entreprises trouvées: " + entreprises.size());
+        return entreprises;
     }
 
     @PostMapping
-    public ResponseEntity<?> create(@RequestBody EntrepriseRequestDTO payload) {
-        final Long userId;
+    public ResponseEntity<?> createEntreprise(@RequestBody Map<String, Object> data) {
+        System.out.println("=== POST /api/entreprises appelé ===");
+        System.out.println("Données reçues: " + data);
+        
         try {
-            userId = jwtUtils.getCurrentUserId();
-        } catch (RuntimeException ex) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Non authentifié: " + ex.getMessage());
-        }
-        User current = userService.findById(userId).orElse(null);
-        if (current == null || !"EMPLOYEUR".equals(current.getRole().name())) {
-            return ResponseEntity.status(HttpStatus.FORBIDDEN).body("Accès réservé aux employeurs");
-        }
-
-        try {
-            Entreprise e = new Entreprise();
-            // Map frontend fields -> backend entity
-            e.setNom(payload.getRaisonSociale());
-            e.setSecteurActivite(payload.getSecteurActivite());
-            e.setEffectif(payload.getEffectif());
-            e.setAdresse(payload.getAdresse());
-            e.setTelephone(payload.getTelephone());
-            e.setEmail(payload.getEmail());
-            e.setZoneAffectation(payload.getZoneAffectation());
-            // Valeurs par défaut pour respecter @NotBlank
-            String ville = payload.getVille();
-            String codePostal = payload.getCodePostal();
-            e.setVille(ville != null && !ville.isBlank() ? ville : "N/A");
-            e.setCodePostal(codePostal != null && !codePostal.isBlank() ? codePostal : "00000");
-            e.setSiret(payload.getSiret());
-            e.setEmployeur(current);
-
-            Entreprise saved = entrepriseRepository.save(e);
-            return ResponseEntity.created(URI.create("/api/entreprises/" + saved.getId())).body(saved);
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Erreur lors de la création de l'entreprise: " + ex.getMessage());
-        }
-    }
-
-    @PutMapping("/{id}")
-    public ResponseEntity<?> update(@PathVariable Long id, @RequestBody EntrepriseRequestDTO payload) {
-        final Long userId;
-        try {
-            userId = jwtUtils.getCurrentUserId();
-        } catch (RuntimeException ex) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Non authentifié: " + ex.getMessage());
-        }
-        Optional<Entreprise> opt = entrepriseRepository.findByIdAndEmployeurId(id, userId);
-        if (opt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Entreprise non trouvée");
-        }
-        try {
-            Entreprise e = opt.get();
-            // Update mapping
-            if (payload.getRaisonSociale() != null) e.setNom(payload.getRaisonSociale());
-            if (payload.getSecteurActivite() != null) e.setSecteurActivite(payload.getSecteurActivite());
-            if (payload.getEffectif() != null) e.setEffectif(payload.getEffectif());
-            if (payload.getAdresse() != null) e.setAdresse(payload.getAdresse());
-            if (payload.getTelephone() != null) e.setTelephone(payload.getTelephone());
-            if (payload.getEmail() != null) e.setEmail(payload.getEmail());
-            if (payload.getZoneAffectation() != null) e.setZoneAffectation(payload.getZoneAffectation());
-            if (payload.getVille() != null) e.setVille(payload.getVille().isBlank() ? "N/A" : payload.getVille());
-            if (payload.getCodePostal() != null) e.setCodePostal(payload.getCodePostal().isBlank() ? "00000" : payload.getCodePostal());
-            if (payload.getSiret() != null) e.setSiret(payload.getSiret());
-
-            Entreprise saved = entrepriseRepository.save(e);
+            Entreprise entreprise = new Entreprise();
+            
+            // Champs obligatoires avec validation
+            String nom = (String) data.get("nom");
+            if (nom == null || nom.trim().isEmpty()) {
+                return ResponseEntity.badRequest().body("Le nom de l'entreprise est obligatoire");
+            }
+            entreprise.setNom(nom.trim());
+            
+            String adresse = (String) data.get("adresse");
+            if (adresse == null || adresse.trim().isEmpty()) {
+                return ResponseEntity.badRequest().body("L'adresse est obligatoire");
+            }
+            entreprise.setAdresse(adresse.trim());
+            
+            String telephone = (String) data.get("telephone");
+            if (telephone == null || telephone.trim().isEmpty()) {
+                return ResponseEntity.badRequest().body("Le téléphone est obligatoire");
+            }
+            entreprise.setTelephone(telephone.trim());
+            
+            String email = (String) data.get("email");
+            if (email == null || email.trim().isEmpty()) {
+                return ResponseEntity.badRequest().body("L'email est obligatoire");
+            }
+            entreprise.setEmail(email.trim());
+            
+            // Champs optionnels avec valeurs par défaut
+            entreprise.setVille(data.get("ville") != null ? ((String) data.get("ville")).trim() : "Ouagadougou");
+            entreprise.setCodePostal(data.get("codePostal") != null ? ((String) data.get("codePostal")).trim() : "01 BP");
+            entreprise.setStatut("ACTIVE");
+            
+            if (data.get("secteurActivite") != null) {
+                entreprise.setSecteurActivite(((String) data.get("secteurActivite")).trim());
+            }
+            if (data.get("effectif") != null) {
+                try {
+                    String effectifStr = data.get("effectif").toString();
+                    entreprise.setEffectif(Integer.parseInt(effectifStr));
+                } catch (NumberFormatException e) {
+                    System.out.println("Effectif invalide, utilisation de 0 par défaut");
+                    entreprise.setEffectif(0);
+                }
+            }
+            
+            // Initialiser les champs optionnels pour éviter les erreurs de contrainte
+            entreprise.setLatitude(null);
+            entreprise.setLongitude(null);
+            entreprise.setAdresseComplete(null);
+            entreprise.setCoordinatesVerified(false);
+            
+            // Timestamps
+            entreprise.setCreatedAt(LocalDateTime.now());
+            entreprise.setUpdatedAt(LocalDateTime.now());
+            
+            System.out.println("Entreprise créée: " + entreprise.getNom() + " - " + entreprise.getEmail());
+            
+            Entreprise saved = entrepriseRepository.save(entreprise);
+            System.out.println("Entreprise sauvegardée avec ID: " + saved.getId());
+            
             return ResponseEntity.ok(saved);
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body("Erreur lors de la mise à jour de l'entreprise: " + ex.getMessage());
+            
+        } catch (Exception e) {
+            System.err.println("Erreur lors de la création de l'entreprise: " + e.getMessage());
+            e.printStackTrace();
+            return ResponseEntity.status(500).body("Erreur interne du serveur: " + e.getMessage());
         }
-    }
-
-    @DeleteMapping("/{id}")
-    public ResponseEntity<?> delete(@PathVariable Long id) {
-        final Long userId;
-        try {
-            userId = jwtUtils.getCurrentUserId();
-        } catch (RuntimeException ex) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Non authentifié: " + ex.getMessage());
-        }
-        Optional<Entreprise> opt = entrepriseRepository.findByIdAndEmployeurId(id, userId);
-        if (opt.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).body("Entreprise non trouvée");
-        }
-        entrepriseRepository.deleteById(id);
-        return ResponseEntity.noContent().build();
     }
 }
